test/fixtures/errors/internal_assert_fail.snapshot
node:internal/assert:<line>
  throw new ERR_INTERNAL_ASSERTION(message);
  ^

Error [ERR_INTERNAL_ASSERTION]: Unreachable!
This is caused by either a bug in Node.js or incorrect usage of Node.js internals.
Please open an issue with this stack trace at https://github.com/nodejs/node/issues

    at <node-internal-frames>
    at Object.<anonymous> (<project-root>/test/fixtures/errors/internal_assert_fail.js:7:8)
    at <node-internal-frames>
    at <node-internal-frames> {
  code: 'ERR_INTERNAL_ASSERTION'
}

Node.js <node-version>
